CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/batchsit_t_pos_trans_queue_ats__x.object-meta.xml
<CustomObject>
    <description>batchsit$t_pos_trans_queue_ats</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_pos_trans_queue_ats</externalName>
    <label>batchsit$t_pos_trans_queue_ats</label>
    <pluralLabel>batchsit$t_pos_trans_queue_ats</pluralLabel>
</CustomObject>