CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/auth_drop_in_days__c.field-meta.xml
<CustomField>
    <fullName>auth_drop_in_days__c</fullName>
    <description>auth_drop_in_days</description>
    <externalDeveloperName>auth_drop_in_days</externalDeveloperName>
    <label>auth_drop_in_days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>