CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/cde_county__c.field-meta.xml
<CustomField>
    <fullName>cde_county__c</fullName>
    <description>cde_county</description>
    <externalDeveloperName>cde_county</externalDeveloperName>
    <label>cde_county</label>
    <length>3</length>
    <type>Text</type>
</CustomField>