CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/cde_status_trans__c.field-meta.xml
<CustomField>
    <fullName>cde_status_trans__c</fullName>
    <description>cde_status_trans</description>
    <externalDeveloperName>cde_status_trans</externalDeveloperName>
    <label>cde_status_trans</label>
    <length>3</length>
    <type>Text</type>
</CustomField>