CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/createdbyid__c.field-meta.xml
<CustomField>
    <fullName>createdbyid__c</fullName>
    <description>createdbyid</description>
    <externalDeveloperName>createdbyid</externalDeveloperName>
    <label>createdbyid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>