CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/drop_in_days_at_the_authorization_lev__c.field-meta.xml
<CustomField>
    <fullName>drop_in_days_at_the_authorization_lev__c</fullName>
    <description>drop_in_days_at_the_authorization_level</description>
    <externalDeveloperName>drop_in_days_at_the_authorization_level</externalDeveloperName>
    <label>Drop_in_days_at_the_authorization_level</label>
    <length>1</length>
    <type>Text</type>
</CustomField>