CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/dte_change_last__c.field-meta.xml
<CustomField>
    <fullName>dte_change_last__c</fullName>
    <description>dte_change_last</description>
    <externalDeveloperName>dte_change_last</externalDeveloperName>
    <label>dte_change_last</label>
    <type>Date</type>
</CustomField>