CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/error_details__c.field-meta.xml
<CustomField>
    <fullName>error_details__c</fullName>
    <description>error_details</description>
    <externalDeveloperName>error_details</externalDeveloperName>
    <label>error_details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>