CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_agrmt_fiscal__c.field-meta.xml
<CustomField>
    <fullName>idn_agrmt_fiscal__c</fullName>
    <description>idn_agrmt_fiscal</description>
    <externalDeveloperName>idn_agrmt_fiscal</externalDeveloperName>
    <label>idn_agrmt_fiscal</label>
    <length>9</length>
    <type>Text</type>
</CustomField>