CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_auth__c.field-meta.xml
<CustomField>
    <fullName>idn_auth__c</fullName>
    <description>idn_auth</description>
    <externalDeveloperName>idn_auth</externalDeveloperName>
    <label>idn_auth</label>
    <length>10</length>
    <type>Text</type>
</CustomField>