CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_case__c.field-meta.xml
<CustomField>
    <fullName>idn_case__c</fullName>
    <description>idn_case</description>
    <externalDeveloperName>idn_case</externalDeveloperName>
    <label>idn_case</label>
    <length>9</length>
    <type>Text</type>
</CustomField>