CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_child_enroll__c.field-meta.xml
<CustomField>
    <fullName>idn_child_enroll__c</fullName>
    <description>idn_child_enroll</description>
    <externalDeveloperName>idn_child_enroll</externalDeveloperName>
    <label>idn_child_enroll</label>
    <length>10</length>
    <type>Text</type>
</CustomField>