CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_client__c.field-meta.xml
<CustomField>
    <fullName>idn_client__c</fullName>
    <description>idn_client</description>
    <externalDeveloperName>idn_client</externalDeveloperName>
    <label>idn_client</label>
    <length>9</length>
    <type>Text</type>
</CustomField>