CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_extnl__c.field-meta.xml
<CustomField>
    <fullName>idn_extnl__c</fullName>
    <description>idn_extnl</description>
    <externalDeveloperName>idn_extnl</externalDeveloperName>
    <label>idn_extnl</label>
    <length>18</length>
    <type>Text</type>
</CustomField>