CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_plan_cnty__c.field-meta.xml
<CustomField>
    <fullName>idn_plan_cnty__c</fullName>
    <description>idn_plan_cnty</description>
    <externalDeveloperName>idn_plan_cnty</externalDeveloperName>
    <label>idn_plan_cnty</label>
    <length>5</length>
    <type>Text</type>
</CustomField>