CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_pos_trans_queue_ats__c.field-meta.xml
<CustomField>
    <fullName>idn_pos_trans_queue_ats__c</fullName>
    <description>idn_pos_trans_queue_ats</description>
    <externalDeveloperName>idn_pos_trans_queue_ats</externalDeveloperName>
    <label>idn_pos_trans_queue_ats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>