CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_provr__c.field-meta.xml
<CustomField>
    <fullName>idn_provr__c</fullName>
    <description>idn_provr</description>
    <externalDeveloperName>idn_provr</externalDeveloperName>
    <label>idn_provr</label>
    <length>9</length>
    <type>Text</type>
</CustomField>