CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/idn_slot_contract__c.field-meta.xml
<CustomField>
    <fullName>idn_slot_contract__c</fullName>
    <externalDeveloperName>idn_slot_contract</externalDeveloperName>
    <label>idn_slot_contract</label>
    <length>9</length>
    <type>Text</type>
</CustomField>