CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <description>name</description>
    <externalDeveloperName>name</externalDeveloperName>
    <label>name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>