CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/fields/slot_contract_description__c.field-meta.xml
<CustomField>
    <fullName>slot_contract_description__c</fullName>
    <externalDeveloperName>slot_contract_description</externalDeveloperName>
    <label>slot_contract_description</label>
    <length>90</length>
    <type>Text</type>
</CustomField>