CHATS_SIT/force-app/main/default/objects/batchsit_t_pos_trans_queue_ats__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>cde_type_trans__c</columns>
    <columns>cde_status_trans__c</columns>
    <columns>createddate__c</columns>
    <columns>idn_agrmt_fiscal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>idn_agrmt_fiscal__c</field>
        <operation>equals</operation>
        <value>209716</value>
    </filters>
    <filters>
        <field>cde_type_trans__c</field>
        <operation>equals</operation>
        <value>5</value>
    </filters>
    <label>All</label>
</ListView>